Fixed input appearence on mobile

--- a/src/css/base/base.pcss
+++ b/src/css/base/base.pcss
@@ -4,6 +4,7 @@
   box-sizing: border-box;
   outline: 0;
   border: 0;
+  border-radius: 0;
 }
 
 html,
@@ -21,4 +22,9 @@ body {
   text-rendering: geometricPrecision;
 
   cursor: default;
+}
+
+input, select {
+  appearance: none;
+  font: inherit;
 }
